Explicit vertex count set. Extensibility.

--- a/demos/texture-arrays.html
+++ b/demos/texture-arrays.html
@@ -42,6 +42,7 @@
 		{
 			shader.draw({
 				mode: "trianglestrip",
+				count: 4,
 				aPos: buffer,
 				uTex: [stone, tree],
 				uOtherTex: seal,
