--- a/simple.html
+++ b/simple.html
@@ -28,7 +28,7 @@
 			var buffer = gl.buffer([0,0, 1,0, 0,1]);
 			var shader = gl.shader("#vert-shader", "#frag-shader");
 			
-			shader.draw({ aPos: buffer });
+			shader.draw({ count: 3, aPos: buffer });
 		</script>
 	</body>
 </html>
